use IntegerCache that is not configurable to avoid property lookup which requires hashtable initialised and that needs reflection